# uniter

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
configs/: base.toml  base.yaml  kaitong_west_lane_single_region.toml  kaitong_west_lane_single_region.yaml  kaitong_west_lane_single_region_rerun_20260406.yaml  kaitong_west_lane_single_region_rerun_optimized_20260406.yaml
data/templates/: region_manifest.example.jsonl
docs/: 技术文档.md
scripts/: run_single_region_train.sh
scripts/data_cleaning/: clean_data_workspace.py
scripts/data_prep/: build_single_region_bootstrap_manifest.py
src/uniter/: __init__.py  cli.py  config.py
src/uniter/data/: __init__.py  annotations.py  collate.py  dataset.py  manifest.py  tools.py
src/uniter/inference/: __init__.py  calibration.py  evaluator.py  explanations.py  exporter.py  judgement.py  runtime.py  visualization.py
src/uniter/metrics/: __init__.py  alignment.py  identity.py  meaning.py  segmentation.py  spatial.py
src/uniter/models/: __init__.py  classification.py  huggingface.py  multimodal.py  pooling.py  projection.py  sentiment.py  spatial.py  (+1 more)
tests/: test_annotations.py  test_calibration.py  test_cli.py  test_collate.py  test_config.py  test_data_tools.py  test_evaluator.py  test_exporter.py  test_huggingface_runtime.py  test_identity_metric.py  test_judgement.py  test_losses.py  test_manifest.py  test_meaning.py  test_model_identity.py  test_reporting.py  test_segmentation_metrics.py  test_spatial_metric.py  test_training_smoke.py  test_visualization.py
需求/: 单区域标签.md  需求ai总结.md
(+10 files in other folders)
